bubba-backend (1.2.4.35) estelle calire; urgency=low

  * setting delaylogin 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 14:40:17 +0100

bubba-backend (1.2.4.34) claire estelle; urgency=low

  * Added hostapd and network manager to config backup.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 08:46:39 +0100

bubba-backend (1.2.4.33) claire estelle; urgency=low

  * To correct repos

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 14:26:55 +0100

bubba-backend (1.2.4.32) karmic; urgency=low

  * Fixed incorrect negation for test of "nologin". 

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 14:24:37 +0100

bubba-backend (1.2.4.31) claire estelle; urgency=low

  * removing TKIP as it can't be used with N at all 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 29 Jan 2010 16:14:03 +0100

bubba-backend (1.2.4.30) claire estelle; urgency=low

  * Changed bringup of br0 during boot.
  * Manually setting eth1 to promisc during boot.

 -- PA Nilsson <pa@excito.com>  Fri, 29 Jan 2010 15:35:16 +0100

bubba-backend (1.2.4.29) claire estelle; urgency=high

  * adding default wmm_ac and tx_queue_data parameters to hostapd.conf
  * adding dh_installudeb compat due to change in usev installation 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 28 Jan 2010 17:47:45 +0100

bubba-backend (1.2.4.28) claire; urgency=low

  * Added functions to bring up bridge interface during boot.

 -- PA Nilsson <pa@excito.com>  Thu, 28 Jan 2010 12:57:43 +0100

bubba-backend (1.2.4.27) claire; urgency=low

  [ Carl Fürstenberg ]
  * add samba-common-bin to depends 

  [ PA Nilsson ]
  * Detecting error  when using empty targetpath with FTP connction
    and incorrect user/pass combination.   (Closes: #1060)
  * Extended error check to not trigger on filenames with "error".
    (Closes: #1078)
  * Changed servicename "cupsys"->"cups" to reflect changes in init-
    scripts.   (Closes: #1093).

 -- Carl Fürstenberg <carl@excito.com>  Thu, 21 Jan 2010 18:01:05 +0100
